# manipulation_skills

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/ISSUE_TEMPLATE/: new-skill.md
action/: Grasp.action  HandGrasp.action  Place.action
msg/: Constraint.msg
