<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation_skills</name>
  <version>0.2.0</version>
  <description>Interfaces for PAL Manipulation skills</description>
  <maintainer email="matteo.villani@pal-robotics.com">Matteo Villani</maintainer>
  <license>Apache License 2.0</license>
  <author email="matteo.villani@pal-robotics.com">Matteo Villani</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_skills</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_archlint</test_depend>
  

  <member_of_group>rosidl_interface_packages</member_of_group>
  

  <export>
    <build_type>ament_cmake</build_type>

    <skill content-type="yaml">
      id: place
      description: |
        Commands the robot to place an object at a specified location.
        This skill sends a goal to the robot's manipulation system to
        execute a placing action.

        Once invoked, the robot will:
          1. Move to the target location.
          2. Release the object.
          3. Return to a safe position.

        Typical uses include placing objects on tables, shelves,
        or designated drop-off points.

        The skill assumes that the robot is already holding an object. See
        :skill:`grasp` for the grasping action.
      interface: action
      default_interface_path: /skill/place
      datatype: manipulation_skills/action/Place
      functional_domains:
        - manipulation
        - motions
      parameters:
        in:
          - name: target
            type: :msg:`geometry_msgs/msg/PoseStamped`
            required: true
            description: |
              The target pose where the object should be placed.
              This includes position and orientation.
          - name: release_upon_completion
            type: boolean
            default: true
            description: |
              If ``true``, the robot will release the object upon reaching the target pose.
              If ``false``, the robot will move to the target pose without releasing the object.
    </skill>

    <skill content-type="yaml">
      id: hand_grasp
      description: |
        Controls a robotic hand or gripper to either **close** (grasp) or **open**
        (release).  This skill sends a goal to the specified end-effector (left, right,
        or default) with an optional precision setting for the closing position.

        Once invoked, the robot will:
          1. Target the desired hand/gripper.
          2. Perform the requested action (close/open).
          3. Report back feedback and a result message indicating success or failure.

        Typical uses include closing a gripper to get hold of an object,
        releasing an object, or partially closing the
        gripper to a specific position for delicate handling.

      interface: action
      default_interface_path: /skill/hand_grasp
      datatype: manipulation_skills/action/HandGrasp
      functional_domains:
        - manipulation
        - motions
      parameters:
        in:
          - name: hand
            type: string
            default: "\"\""
            description: |
              Which hand or end-effector to use. Supported values:
                * ``left``: Use the left hand.
                * ``right``: Use the right hand.
                * default (empty string): Use the default hand (the right in case of 2 arms).
              
              Any other value will be rejected and the default will be used.
          - name: action
            type: integer
            default: 0
            description: |
              The gripper action to perform:
                * ``0``: Close the gripper (grasp).
                * ``1``: Open the gripper (release).
              
              Values outside ``[0, 1]`` will be clamped to the closest integer.
          - name: closing_position
            type: float
            default: 0.0
            description: |
              Defines how far to close the gripper. Range: ``[0.0, 1.0]``  
              (``0.0`` = fully closed, ``1.0`` = fully open).  
              Values outside the range will be replaced with the default (``0.0``).
              
              This allows partial grasps for delicate objects.
          - name: meta.priority
            type: integer
            default: 128
            description: Between 0 and 255. Higher means this skill request will be prioritized.
        out:
          - name: result.error_msg
            type: string
            description: |
              A string describing the execution outcome.

              Examples:
                * ``Grasp Executed!``: Successful grasp/release.
                * ``Problems during execution.``: Action failed.
          - name: feedback
            type: object
            description: |
              Live updates while the action runs. Can contain:
                * ``data_str``: Text feedback (e.g., which hand, action, position).
                * ``data_bool``: ``True`` if action succeeded, ``False`` otherwise.
    </skill>

  </export>
</package>
  
